--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem distinctio alias porro reprehenderit excepturi reiciendis vero, facilis similique saepe quam inventore repellat hic, eligendi nobis rerum deserunt nam repudiandae aut!</p>
         <a href="#" class="btn main-btn">Show more</a>
       </div>
-      <img src="images/3.png" alt="">
+      <img src="3.png" alt="">
     </div>
   </section>
 
